Point placements and internal rework
- Point placements are now actually used
- This is the first usage of the tag system
- Point references are no longer a thing
- Fixed many shape factories
- Internal movements and changes
- Translation changes